:sparkles: Align with SmartClassLoader handling for AOP proxy classes